--- a/porfolio/package.json
+++ b/porfolio/package.json
@@ -10,13 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scroll": "^1.9.0",
-    "react-scroll-parallax": "^3.4.3"
+    "react-scroll-parallax": "^3.4.3",
+    "react-simple-typewriter": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
