--- a/porfolio/package.json
+++ b/porfolio/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-router-dom": "^6.19.0",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.3",
     "react-simple-typewriter": "^5.0.1"
