--- a/porfolio/package.json
+++ b/porfolio/package.json
@@ -13,6 +13,7 @@
     "@emailjs/browser": "^3.11.0",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
+    "esbuild": "^0.19.6",
     "framer-motion": "^10.16.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
