--- a/porfolio/package.json
+++ b/porfolio/package.json
@@ -22,7 +22,9 @@
     "react-router-dom": "^6.19.0",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.3",
-    "react-simple-typewriter": "^5.0.1"
+    "react-simple-typewriter": "^5.0.1",
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
